Mark removable gcache files with file attributes

ext4 encryption on ChromeOS doesn't allow access to inode attributes for files
in encrypted dir, so we need to indicate files that are ok to remove on low disk
space with extended attributes too.

BUG=chromium:879003

Change-Id: Ibf917ac255c93ea4e971b2a622b51e452257a4c7
Reviewed-on: https://chromium-review.googlesource.com/1196288
Reviewed-by: Stuart Langley <slangley@chromium.org>
Reviewed-by: Sam McNally <sammc@chromium.org>
Commit-Queue: Sergei Datsenko <dats@chromium.org>
Cr-Commit-Position: refs/heads/master@{#587958}
Former-commit-id: e5a99eb66dd8654f086b0e6c4507fcf6800851c7